# TiSys

./: .sysobj.ti  CMakeLists.txt  LICENSE  Makefile
doc/: classes.txt  ifconfig.c  myifconfig.c  teste
etc/: control  tiobj.lang
examples/: info.cpp  listdir.cpp
src/: .pack.extract.kate-swp  .tisys_obj.ti  folder-ls.cpp  node-class.cpp  node-is.cpp  teste.cpp  tisys-ctx.cpp  tisys-filesystem.cpp  tisys-info.cpp  tisys-ls.cpp  tisys-objsystem.cpp  tisys-process.cpp  tisys-system.cpp  tisys.hpp  types.h
src-bin/: project.config  project.info  project.make
